# xdg-desktop-portal-froggy

./: Cargo.toml
src/: config.rs  dbus.rs  main.rs  window.rs
