[package]
name = "xdg-desktop-portal-froggy"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
egui-sf2g = "0.6.0"
egui-file-dialog = "0.12"
zbus = "5"
dirs = "6.0.0"
serde.version = "1"
serde.features = ["derive"]
ron = "0.12"

[profile.release]
lto = "thin"
panic = "abort"
strip = "symbols"
